Had some spacing issues in responsive mode. (SOLVED)

--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -526,6 +526,11 @@ $small : only screen and (max-width: 767px);
     .section-heading-main {
       font-size: 27px;
     }
+
+  }
+
+  .section-paragraph {
+    margin-bottom: 40px;
   }
 
   .home {
@@ -589,6 +594,14 @@ $small : only screen and (max-width: 767px);
   .section-paragraph {
     p {
       font-size: 14px;
+    }
+  }
+
+  .masonary-container {
+    .masonary-content {
+      .masonary-img {
+        margin-bottom: 5px;
+      }
     }
   }
 
