--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1304,6 +1304,7 @@ footer {
     .footer-single-blog {
       display: flex;
       margin-bottom: 40px;
+      align-items: center;
 
       .footer-blog-img {
         img {
